--- a/1_INTRODUCAO_ERROS/1.4_exemplos_aplicados.ipynb
+++ b/1_INTRODUCAO_ERROS/1.4_exemplos_aplicados.ipynb
@@ -37,28 +37,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.4166666666666665\n",
-      "1.4142156862745097\n",
-      "1.4142135623746899\n",
-      "1.414213562373095\n",
-      "1.414213562373095\n",
-      "1.414213562373095\n"
+      "1.5 1.0\n",
+      "1.4166666666666665 0.058823529411764816\n",
+      "1.4142156862745097 0.001733102253032923\n",
+      "1.4142135623746899 1.5018239651360762e-06\n"
      ]
     }
    ],
    "source": [
-    "x = 1.5\n",
+    "x = 1.0\n",
+    "x_ant = 0.0\n",
     "\n",
-    "for i in range(6):\n",
+    "err = 10.0\n",
+    "\n",
+    "while err>0.0001:\n",
     "    x = 0.5*(x + 2/x)\n",
-    "    print (x)"
+    "    err = abs(x-x_ant)/abs(x)\n",
+    "    x_ant = x\n",
+    "    print (x, err)"
    ]
   },
   {
@@ -71,7 +76,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -136,7 +143,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -180,7 +189,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -215,7 +226,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -283,7 +296,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -344,7 +359,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -393,7 +410,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -439,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
