--- a/1_INTRODUCAO_ERROS/1.2_erros_nas_aproximacoes_numericas.ipynb
+++ b/1_INTRODUCAO_ERROS/1.2_erros_nas_aproximacoes_numericas.ipynb
@@ -31,9 +31,9 @@
    "source": [
     "### Exemplo\n",
     "\n",
-    "Consideremos o sistema $ SPF (b, n, exp_{min} , exp_{max}) = SPF (10, 4, −5, 5) $\n",
+    "Consideremos o sistema $ SPF (b, n, exp_{min} , exp_{max}) = SPF (10, 4, -5, 5) $\n",
     "\n",
-    "a) Se $a=0.5324 \\times 10^3$ e $b=0.4212 \\times 10^{−2}$, então $a \\times b = 0.22424688 \\times 10^1$, que é arredondado e armazenado como $a \\times b = 0.2242 \\times 10^1$.\n",
+    "a) Se $a=0.5324 \\times 10^3$ e $b=0.4212 \\times 10^{-2}$, então $a \\times b = 0.22424688 \\times 10^1$, que é arredondado e armazenado como $a \\times b = 0.2242 \\times 10^1$.\n",
     "\n",
     "b) Se $a=0.5324 \\times 10^3$ e $b=0.1237 \\times 10^{2}$, então $a + b = 0.54477 \\times 10^3$, que é arredondado e armazenado como $a + b = 0.5448 \\times 10^3$.\n"
    ]
@@ -54,11 +54,11 @@
     "\n",
     "ou\n",
     "\n",
-    "$$ f(x_{i+1}) \\cong f(x_i) + f'(x_i)(x_{i+1}-x_i) + \\frac{f\"(x_i)}{2!} (x_{i+1}-x_i)^2$$\n",
+    "$$ f(x_{i+1}) \\cong f(x_i) + f'(x_i)(x_{i+1}-x_i) + \\frac{f''(x_i)}{2!} (x_{i+1}-x_i)^2$$\n",
     "\n",
     "Podemos adicionar mais termos à série fazendo\n",
     "\n",
-    "$$ f(x_{i+1}) \\cong f(x_i) + f'(x_i)(x_{i+1}-x_i) + \\frac{f\"(x_i)}{2!} (x_{i+1}-x_i)^2 + \\frac{f^{(3)}(x_i)}{3!} (x_{i+1}-x_i)^3 + ...+\\frac{f^{(n)}(x_i)}{n!} (x_{i+1}-x_i)^n + R_n$$\n",
+    "$$ f(x_{i+1}) \\cong f(x_i) + f'(x_i)(x_{i+1}-x_i) + \\frac{f''(x_i)}{2!} (x_{i+1}-x_i)^2 + \\frac{f^{(3)}(x_i)}{3!} (x_{i+1}-x_i)^3 + ...+\\frac{f^{(n)}(x_i)}{n!} (x_{i+1}-x_i)^n + R_n$$\n",
     "\n",
     "Truncando a série o n-ésimo termo, o erro será dado por \n",
     "\n",
@@ -68,7 +68,7 @@
     "\n",
     "Se o incremento no varor de $x$ for constante, a série pode ser expressa por  \n",
     "\n",
-    "$$ f(x_{i+1}) \\cong f(x_i) + f'(x_i)h + \\frac{f\"(x_i)}{2!}h^2 + \\frac{f^{(3)}(x_i)}{3!} h^3 + ...+\\frac{f^{(n)}(x_i)}{n!} h^n + R_n$$\n",
+    "$$ f(x_{i+1}) \\cong f(x_i) + f'(x_i)h + \\frac{f''(x_i)}{2!}h^2 + \\frac{f^{(3)}(x_i)}{3!} h^3 + ...+\\frac{f^{(n)}(x_i)}{n!} h^n + R_n$$\n",
     "\n",
     "e o resto agora é\n",
     "\n",
@@ -85,9 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -145,9 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -222,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
