--- a/2_SISTEMAS_LINEARES/2.1_introducao_e_conceitos_fundamentais.ipynb
+++ b/2_SISTEMAS_LINEARES/2.1_introducao_e_conceitos_fundamentais.ipynb
@@ -6,8 +6,7 @@
    "source": [
     "# 2.1 Introdução e conceitos fundamentais\n",
     "\n",
-    "Considere um sistem  de equações lineares $Ax=b$, em que $A= (a_{ij})_i,j=1,..,n$, é a matriz dos coeficientes, \n",
-    "$x=(x_1,x_2,...,x_n)^t$ é o vetor de incógintas e $b=(b_1, b_2,...,b_n)^t$ é o vetor de termos independentes de  $x$, em um sistema equivalente. Representado por\n",
+    "Considere um sistema  de equações lineares \n",
     "\n",
     "$$ \\begin{cases} \n",
     "\t         a_{11}x_1 +a_{12}x_2 + \\cdots + a_{1n}x_n = b_1\\\\ \n",
@@ -16,7 +15,16 @@
     "\t         a_{n1}x_1 +a_{n2}x_2 + \\cdots + a_{nn}x_n = b_1\\\\\n",
     "             \\end{cases} $$\n",
     "\n",
-    "cuja forma forma matricial $Ax=b$ tem a seguinte representação\n",
+    "O qual pode ser escrito em notação compacta, na seguinte forma\n",
+    "\n",
+    "$$  \\sum_{j=1}^{n} a_{ij} x_j = b_i$$\n",
+    "\n",
+    "com $i=1,2,...,n$. Ou, ainda, na forma de equação matricial\n",
+    "\n",
+    "$$Ax=b$$\n",
+    "\n",
+    "em que $A= (a_{ij})$ com $i,j=1,..,n$, é a matriz dos coeficientes, \n",
+    "$x=(x_1,x_2,...,x_n)^t$ é o vetor de incógintas e $b=(b_1, b_2,...,b_n)^t$ é o vetor de termos independentes de  $x$. Então, tem-se\n",
     "\n",
     "$$\\left[\\begin{array}{cccc} \n",
     "\t         a_{11} & a_{12} & \\cdots & a_{1n} \\\\ \n",
@@ -39,15 +47,12 @@
     "\t         \\end{array} \\right]\n",
     "\t         $$\n",
     "\n",
-    "ou, ainda, escrito em notação compacta, tem a seguinte forma\n",
     "\n",
-    "$$  \\sum_{j=1}^{n} a_{ij} x_j = b_i$$\n",
-    "\n",
-    "com $i=1,2,...,n$. \n",
     "\n",
     "Resolver o sistema dado, consiste em encontrar o vetor solução $\\overline x=(\\overline x_1, \\overline x_2,..., \\overline x_n)^t$ que satisfaça todas as equações simultaneamente.\n",
     "\n",
-    "Graficamente em $R^2$, a solução de um sistema linear representa a intersecção das retas definidas pelas equações.\n"
+    "Graficamente em $R^2$, a solução de um sistema linear representa a intersecção das retas definidas pelas equações.\n",
+    "\n"
    ]
   },
   {
@@ -68,9 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -115,9 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -163,9 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -194,11 +193,129 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
+   "source": [
+    "## Sistemas triangulares\n",
+    "\n",
+    "Sistemas lineares triangulares são aqueles cuja matriz dos coeficientes é uma matriz triangular. Em geral o algoritmo para resolução de sistemas triangulares é bastante simples e basea-se em substituições subsequentes. \n",
+    "\n",
+    "**Sistema triangular inferior**\n",
+    "\n",
+    "Um sistema triangular inferior $Ax=b$ com coeficientes $(a_{ij})=0$ para $i<j$ e $a_{ij} \\neq 0$, $i=0,1,...,n$ é representado por\n",
+    "\n",
+    "$$ \\begin{cases} \n",
+    "\t         a_{11}x_1 = b_1\\\\\n",
+    "\t         a_{21}x_1 + a_{22}x_2 = b_2\\\\\n",
+    "\t         a_{31}x_1 + a_{32}x_2 + a_{33}x_3= b_3\\\\\n",
+    "\t         \\vdots \\\\\n",
+    "\t         a_{n1}x_1 + a_{n2}x_2 + a_{33}x_3 + \\cdots + a_{nn}x_n= b_n\\\\\n",
+    "\t         \\end{cases} $$\n",
+    "             \n",
+    "pode ser resolvido usando o seguinte algoritmo:\n",
+    "\n",
+    "$$ x_1 = b_1/a_{11}$$\n",
+    "\n",
+    "para $i=2,3...,n$, faça\n",
+    "\n",
+    "$$ x_i = \\frac{b_i- \\sum\\limits_{j=1}^{(i-1)} a_{ij}x_j}{a_{ii}}$$\t         \n",
+    "\t         \n",
+    "Usando Python, um código que implementa esse algoritmo, é mostrado abaixo:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0, -1.0, 0.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = [[2,0,0], [1,4,0], [1,1,1]] \n",
+    "b = [2,-3,0]\n",
+    "x1 = b[0]/A[0][0]\n",
+    "x = [x1]\n",
+    "\n",
+    "for i in range(1,len(A)):\n",
+    "    soma = 0\n",
+    "    for j in range(0,i):\n",
+    "        soma +=  A[i][j]*x[j]\n",
+    "    x.append((b[i]-soma)/A[i][i])\n",
+    "print (x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Sistema triangular superior**\n",
+    "\n",
+    "Um sistema triangular superior $Ax=b$ com coeficientes $(a_{ij})=0$ para $i>j$ e $a_{ij} \\neq 0$, $i=0,1,...,n$ é representado por\n",
+    "\n",
+    "$$ \\begin{cases} \n",
+    "\t         a_{21}x_1 + a_{22}x_2 + a_{23}x_3 + \\cdots + a_{2n}x_n = b_1\\\\\n",
+    "\t         a_{22}x_2 + a_{23}x_3 + \\cdots + a_{2n}x_n = b_2\\\\\n",
+    "\t         a_{33}x_3 + \\cdots + a_{3n}x_n = b_3\\\\\n",
+    "\t         \\vdots \\\\\n",
+    "\t         a_{nn}x_n= b_n\\\\\n",
+    "\t         \\end{cases} $$\n",
+    "             \n",
+    "pode ser resolvido usando o seguinte algoritmo:\n",
+    "\n",
+    "$$ x_n = b_n/a_{nn}$$\n",
+    "\n",
+    "para $i=(n-1), (n-2),...,1$, faça\n",
+    "\n",
+    "$$ x_i = \\frac{b_i- \\sum\\limits_{j=i+1}^{(n)} a_{ij}x_j}{a_{ii}}$$\t\n",
+    "\n",
+    "Usando Python, um código que implementa esse algoritmo, é mostrado abaixo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0, 1.0, 0.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = [[3,1,0], [0,2,-1], [0,0,3]] \n",
+    "b = [4,2,0]\n",
+    "\n",
+    "n = len(A)-1       #os indices correm de 0 ate n-1\n",
+    "xn = b[n]/A[n][n]\n",
+    "\n",
+    "x = [0]*len(A)     # cria um vetor de zeros    \n",
+    "x[-1] = xn         # atribui xn na ultima posicao de x\n",
+    "    \n",
+    "for i in range(n-1,-1,-1):\n",
+    "    soma = 0\n",
+    "    for j in range(i+1,n+1):\n",
+    "        soma +=  A[i][j]*x[j]\n",
+    "    xi = (b[i]-soma)/A[i][i]\n",
+    "    x[i] = xi\n",
+    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -219,9 +336,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
