--- a/2_SISTEMAS_LINEARES/2.2_decomposicao_LU.ipynb
+++ b/2_SISTEMAS_LINEARES/2.2_decomposicao_LU.ipynb
@@ -218,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Sistema triangular inferior**\n",
+    "**Sistema triangular superior**\n",
     "\n",
     "Um sistema triangular superior $Ax=b$ com coeficientes $(a_{ij})=0$ para $i>j$ e $a_{ij} \\neq 0$, $i=0,1,...,n$ é representado por\n",
     "$$ \\begin{cases} \n",
@@ -238,10 +238,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#funcao para resolver um sistema triangula superior U\n",
@@ -270,10 +268,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "L = [[3,1,0], [0,2,-1], [0,0,3]] \n",
@@ -315,10 +311,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#funcao fatorar uma matriz A em um produto LU\n",
@@ -528,9 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -586,9 +578,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
