add 3/estudo de casos

--- a/2_SISTEMAS_LINEARES/2.3_metodo_da_eliminacao_de_gauss.ipynb
+++ b/2_SISTEMAS_LINEARES/2.3_metodo_da_eliminacao_de_gauss.ipynb
@@ -181,13 +181,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Outro algoritmo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "from numpy import dot\n",
+    "def gaussElimin(a,b): \n",
+    "    n = len(b) \n",
+    "    for k in range(0,n-1): \n",
+    "        for i in range(k+1,n): \n",
+    "            if a[i][k] != 0.0: \n",
+    "                lam = a [i][k]/a[k][k] \n",
+    "                a[i][k+1:n] = a[i][k+1:n] - lam*a[k][k+1:n] \n",
+    "                b[i] = b[i] - lam*b[k] \n",
+    "    for k in range(n-1,-1,-1): \n",
+    "        b[k] = (b[k] - dot(a[k][k+1:n],b[k+1:n]))/a[k][k] \n",
+    "    return b\n",
+    "\n",
+    "A = np.array([[3.,2.,4.,1.],\n",
+    "     [1.,1.,2.,2.],\n",
+    "     [-4.,3.,2.,3.]])\n",
+    "b = np.array([1., 2., 3.])\n",
+    "\n",
+    "print (gaussElimin(A,b))"
+   ]
   }
  ],
  "metadata": {
