--- a/3_ZEROS_DE_FUNCOES/3.1_Introducao_e_conceitos_basicos .ipynb
+++ b/3_ZEROS_DE_FUNCOES/3.1_Introducao_e_conceitos_basicos .ipynb
@@ -9,20 +9,21 @@
     "Em ciências e engenharias, frequentemente a solução de um problema real é obtida resolvendo uma equação em uma variável real, a qual sempre pode ser escrita na forma \n",
     "$$f(x)=0$$\n",
     "\n",
-    "Dada uma função $f:R \\rightarrow R$ dizemos que $\\overline{x} \\in R$, tal que $f(\\overline{x})=0$ é um {\\it zero} (ou {\\it raíz}) da função $f$. Graficamente, uma raíz é o ponto onde a função $f(x)$ cruza ou toca o eixo $x$. Uma equação $f(x)=0$ pode não ter solução (raiz real), ter uma única raiz ou várias.\n",
+    "Dada uma função $f:R \\rightarrow R$ dizemos que $\\overline{x} \\in R$, tal que $f(\\overline{x})=0$ é um _zero_ (ou _it raíz_) da função $f$. Graficamente, uma raíz é o ponto onde a função $f(x)$ cruza ou toca o eixo $x$. Uma equação $f(x)=0$ pode não ter solução (raiz real), ter uma única raiz ou várias.\n",
     "\n",
     "![raizes.jpg](https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/raizes.jpg)\n",
     "\n",
-    "Quando a equação é simples, o valor de $x$ pode ser determinado analiticamente. Esse é o caso quando se escreve $x$ explicitamente após a aplicação de operações matemáticas, ou quando uma fórmula conhecida (como a fórmula de Bháskar para resolução de equações quadráticas) pode ser usada para determinar o valor exato de $x$. Em muitas situações, no entanto, é impossível determinar analiticamente a raiz de uma equação.\n",
+    "Quando a equação é simples, o valor de $x$ pode ser determinado analiticamente. Esse é o caso quando se escreve $x$ explicitamente após a aplicação de operações matemáticas, ou quando uma fórmula conhecida (como a fórmula de Bháskara para resolução de equações quadráticas) pode ser usada para determinar o valor exato de $x$. Em muitas situações, no entanto, é impossível determinar analiticamente a raiz de uma equação.\n",
     "\n",
     "\n",
     "## Exemplo\n",
     "Em termodinâmica, sob determinadas condições, a relação entre o calor $Q$ fornecido a um gás e sua variação de temperatura $T_f - T_i$ é dada por \n",
+    "\n",
     "$$ Q = nR \\left[ A (T_f-T_i)+ \\frac{B}{2}(T_f^2-T_i^2) + \\frac{C}{3}(T_f^3-T_i^3) \\right].$$\n",
     "\n",
     "Para o gás metano tem-se $R=8,314 J/mol.K$, $A=1,702$, $B=9,081 \\times 10^{-3}K^{-1}$, $C=-2,164 \\times 10^{-6} K^{-2}$. \n",
     "\n",
-    "Suponha o problema de calcular a temperatura final $T_f$ se $20 kJ$ de energia que é absorvido pelo gás, supondo estar contido em uma uma câmara com $n=2 mol$ de metano a temperatura $T_i = 300 K$. \n",
+    "Considere o problema de calcular a temperatura final $T_f$ se $20 kJ$ de energia que é absorvido pelo gás, supondo estar contido em uma uma câmara com $n=2 mol$ de metano a temperatura $T_i = 300 K$. \n",
     "\n",
     "## Exemplo\n",
     "A área do segmento $A_S$ de um círculo de raio $r$ (ver figura abaixo) é dada por $A_S=\\frac{1}{2}r^2(\\theta-sen\\theta).$\n",
@@ -58,9 +59,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
