--- a/2_SISTEMAS_LINEARES/2.5_metodos_iterativos.ipynb
+++ b/2_SISTEMAS_LINEARES/2.5_metodos_iterativos.ipynb
@@ -6,14 +6,7 @@
    "source": [
     "# Métodos Iterativos\n",
     "\n",
-    "## Método de Jacobi-Richardson\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exemplo "
+    "## Exemplos  Jacobi-Richardson\n"
    ]
   },
   {
@@ -48,55 +41,6 @@
     "for i in range(10):\n",
     "    (x1,x2) = f(x1, x2)\n",
     "    print (x1,x2)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(0.8000, 1.0333, -0.0778) err= 1.0\n",
-      "(0.9911, 1.0015, -0.0035) err= 0.190828402367\n",
-      "(0.9996, 1.0001, -0.0002) err= 0.00849326793298\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "x = np.array([0.,0.,0.])\n",
-    "x_ant = np.array([0.,0.,0.])\n",
-    "eps = 0.01\n",
-    "\n",
-    "A = np.array([[-10., 2.0, 2.0],\n",
-    "              [ 1.0, 6.0, 0.0],\n",
-    "              [-1.0, 1.0, 3.0]])\n",
-    "b = np.array([-8., 7., 0.])\n",
-    "\n",
-    "x1 = lambda x2, x3: (b[0] - A[0,1]*x2 - A[0,2]*x3)/A[0,0]\n",
-    "x2 = lambda x1, x3: (b[1] - A[1,0]*x1 - A[1,2]*x3)/A[1,1]\n",
-    "x3 = lambda x1, x2: (b[2] - A[2,0]*x1 - A[2,1]*x2)/A[2,2]\n",
-    "\n",
-    "err = 10.\n",
-    "while err>eps:\n",
-    "#for k in range(5):\n",
-    "    x[0] = x1(x[1],x[2])\n",
-    "    x[1] = x2(x[0],x[2])\n",
-    "    x[2] = x3(x[0],x[1])\n",
-    "    err = np.amax(np.absolute(x-x_ant))/np.amax(np.absolute(x))   \n",
-    "    print (\"(%.4f,\"%x[0],\"%.4f,\"%x[1],\"%.4f)\"%x[2], \"err=\",err)\n",
-    "    x_ant = np.copy(x)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exemplo: Jacobi-Richardson"
    ]
   },
   {
@@ -150,6 +94,48 @@
    },
    "source": [
     "## Exemplo: Gauss-Seidel\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0.8000, 1.0333, -0.0778) err= 1.0\n",
+      "(0.9911, 1.0015, -0.0035) err= 0.19082840236686394\n",
+      "(0.9996, 1.0001, -0.0002) err= 0.00849326793297563\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x = np.array([0.,0.,0.])\n",
+    "x_ant = np.array([0.,0.,0.])\n",
+    "eps = 0.01\n",
+    "\n",
+    "A = np.array([[-10., 2.0, 2.0],\n",
+    "              [ 1.0, 6.0, 0.0],\n",
+    "              [-1.0, 1.0, 3.0]])\n",
+    "b = np.array([-8., 7., 0.])\n",
+    "\n",
+    "x1 = lambda x2, x3: (b[0] - A[0,1]*x2 - A[0,2]*x3)/A[0,0]\n",
+    "x2 = lambda x1, x3: (b[1] - A[1,0]*x1 - A[1,2]*x3)/A[1,1]\n",
+    "x3 = lambda x1, x2: (b[2] - A[2,0]*x1 - A[2,1]*x2)/A[2,2]\n",
+    "\n",
+    "err = 10.\n",
+    "while err>eps:\n",
+    "#for k in range(5):\n",
+    "    x[0] = x1(x[1],x[2])\n",
+    "    x[1] = x2(x[0],x[2])\n",
+    "    x[2] = x3(x[0],x[1])\n",
+    "    err = np.amax(np.absolute(x-x_ant))/np.amax(np.absolute(x))   \n",
+    "    print (\"(%.4f,\"%x[0],\"%.4f,\"%x[1],\"%.4f)\"%x[2], \"err=\",err)\n",
+    "    x_ant = np.copy(x)"
    ]
   },
   {
