--- a/3_ZEROS_DE_FUNCOES/3.3_metodo_da_bissecao.ipynb
+++ b/3_ZEROS_DE_FUNCOES/3.3_metodo_da_bissecao.ipynb
@@ -59,19 +59,18 @@
     "\n",
     "*Solução:* Reescrevendo a equação como $x^2=-ln(x)$ e esboçando os gráficos de $f_1(x)=x^2$ e $f_2(x)=-ln(x)$ observamos que existe uma raiz no intervalo $[0.1,1]$.\n",
     "\n",
-    "![localizacao.png](https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/3.3_exemplo_1loc.png)\n",
+    "\n",
+    "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/3.3_exemplo_1loc.png\" width=\"400\">\n",
     "\n",
     "Então, na primeira iteração fazemos $x_m = \\frac{a+b}{2}=\\frac{1.0-0.1}{2}=0.55$. Como $f(a)=f(0.1)=-2.293$, $f(b)=f(1.0)=1$ e $f(x_m)=f(0.55)=-0.295$ temos que a raíz está no intervalo $[x_m,b]$. Além disso, $\\frac{|x_1-x_0|}{|x_0|}=0.2953$ é maior que $\\epsilon = 0.01$. Então seguimos o processo iterativo obtendo a sequência abaixo.\n",
     "\n",
-    "![localizacao.png](https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/3.3_exemplo_1tab.png)"
+    "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/3.3_exemplo_1tab.png\" width=\"500\">\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -106,11 +105,69 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
+   "source": [
+    "### Exemplo 2\n",
+    "Calcular, pelo método da bisseção, corretamente até a terceira casa decimal, a raiz da equação  $ \\left( \\frac{x}{2} \\right)^2 -sen(x) = 0 $, localizada no intervalo ($a_0=1,5$ e $b_0=2$)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = 1.7500 | Err = 1.7500\n",
+      "x = 1.8750 | Err = 0.1250\n",
+      "x = 1.9375 | Err = 0.0625\n",
+      "x = 1.9062 | Err = 0.0312\n",
+      "x = 1.9219 | Err = 0.0156\n",
+      "x = 1.9297 | Err = 0.0078\n",
+      "x = 1.9336 | Err = 0.0039\n",
+      "x = 1.9355 | Err = 0.0020\n",
+      "x = 1.9346 | Err = 0.0010\n",
+      "x = 1.9341 | Err = 0.0005\n",
+      "x = 1.9338 | Err = 0.0002\n",
+      "x = 1.9337 | Err = 0.0001\n",
+      "x = 1.9338 | Err = 0.0001\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "a = 1.5\n",
+    "b = 2.0\n",
+    "err = 10.0\n",
+    "x_ant = 0.0\n",
+    "\n",
+    "def f(x):\n",
+    "    y = (0.5*x)**2-math.sin(x)\n",
+    "    return y\n",
+    "\n",
+    "while err>0.0001:\n",
+    "    x = (a+b)/2.0\n",
+    "    if f(x)*f(a) < 0:\n",
+    "        b = x\n",
+    "    elif f(x)*f(a) > 0:\n",
+    "        a = x\n",
+    "    else:\n",
+    "        print (\"A raiz exata é x=\", x)\n",
+    "        break \n",
+    "    err = abs(x-x_ant)\n",
+    "    x_ant = x\n",
+    "    print (\"x = %.4f\"%x,\"| Err = %.4f\"% err)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -131,9 +188,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
