--- a/3_ZEROS_DE_FUNCOES/3.4_metodo_das_aproximacoes_sucessivas.ipynb
+++ b/3_ZEROS_DE_FUNCOES/3.4_metodo_das_aproximacoes_sucessivas.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "$$ x_{i+1} = \\phi(x_i) , \\,\\,\\,\\,\\, i = 0,1,2,...$$\n",
     "\n",
-    "Existem muitas ormas diferentes de se obter a função de iteração, como é mostrado nos exempols a seguir.\n",
+    "Existem muitas formas diferentes de se obter a função de iteração, como é mostrado nos exempols a seguir.\n",
     "\n",
     "### Exemplo 1\n",
     "Seja a equação $f(x) = x^2-7x=0$, então, algumas possíveis funções de iteração são\n",
@@ -48,7 +48,12 @@
     "\n",
     "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/3.4_ponto_fixo_convergente.PNG\" width=\"500\">\n",
     "\n",
-    "\n"
+    "\\noindent {\\bf Convergência}\\\\\n",
+    "Seja $\\phi(x)$ uma função contínua e derivável em $I=[a,b]$ centrado em $\\overline{x}$, então, se $|\\phi'(x)|<1$ em $I$, a sequência ${x_k}$, $k=0,1,2,3,..$ querada por $x_{k+1}=\\phi(x_k)$ converge para a raiz $\\overline{x}$ procurada.\n",
+    "\n",
+    "No caso do processo iterativo gerar sequências divergentes, uma interpretação geométrica é mostrada na fig. \\ref{divergentes}. \n",
+    "\n",
+    "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/3.4_ponto_fixo_divergente.PNG\" width=\"500\">\n"
    ]
   },
   {
