--- a/8_SOLUCAO_NUMERICA_DE_EDOs/8.3_metodos_de_serie_de_taylor.ipynb
+++ b/8_SOLUCAO_NUMERICA_DE_EDOs/8.3_metodos_de_serie_de_taylor.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 8.3 Métodos de Série de Taylor\n"
+    "# 8.3 Métodos de Série de Taylor\n",
+    "kajsdhfçashdçiu\n"
    ]
   }
  ],
@@ -24,9 +25,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
