--- a/2_SISTEMAS_LINEARES/2.2_decomposicao_LU.ipynb
+++ b/2_SISTEMAS_LINEARES/2.2_decomposicao_LU.ipynb
@@ -239,7 +239,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#funcao para resolver um sistema triangula superior U\n",
@@ -269,7 +271,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "L = [[3,1,0], [0,2,-1], [0,0,3]] \n",
@@ -312,7 +316,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#funcao fatorar uma matriz A em um produto LU\n",
@@ -522,7 +528,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -578,7 +586,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
