--- a/2_SISTEMAS_LINEARES/2.3_metodo_da_eliminacao_de_gauss.ipynb
+++ b/2_SISTEMAS_LINEARES/2.3_metodo_da_eliminacao_de_gauss.ipynb
@@ -121,7 +121,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -234,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
