--- a/6_APROXIMACAO_DE_FUNCOES/6.4_ajuste_nao_linear_e_linearizacao.ipynb
+++ b/6_APROXIMACAO_DE_FUNCOES/6.4_ajuste_nao_linear_e_linearizacao.ipynb
@@ -23,13 +23,13 @@
     "\n",
     "$$ g(x) = \\frac{1}{a_1x+a_2}$$\n",
     "\n",
-    "Para encontrar os parêmetros $a_1$ e $a_2$ da forma como fizemos anteriormente, podemos linearizar a função fazendo\n",
+    "Para encontrar os parâmetros $a_1$ e $a_2$ da forma como fizemos anteriormente, podemos linearizar a função fazendo\n",
     "\n",
     "$$ h(x) = \\frac{1}{g(x)} = a_1x+a_2 $$\n",
     "\n",
     "que aproxima a função\n",
     "\n",
-    "$$ \\frac{1}{f(x)}\n",
+    "$$ \\frac{1}{f(x)}$$\n",
     "\n",
     "e temos agora o caso do ajuste linear, já desenvolvido anteriormente.\n",
     "\n",
@@ -103,7 +103,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O que sugere um comportamento de uma função do tipo $ g(x) = \\frac{1}{a_1x+a_2}$. Para confirmar, e verificar se a linearização do tipo $ h(x) = \\frac{1}{g(x)} = a_1x+a_2 $ irá funcionar, construimos uma nova tabela e plotamos os pontos"
+    "O que sugere um comportamento de uma função do tipo $$g(x) = \\frac{1}{a_1x+a_2}$$. \n",
+    "Para confirmar, e verificar se a linearização do tipo $$h(x) = \\frac{1}{g(x)} = a_1x+a_2$$ irá funcionar, construímos uma nova tabela e plotamos os pontos"
    ]
   },
   {
