--- a/6_APROXIMACAO_DE_FUNCOES/6.4_ajuste_nao_linear_e_linearizacao.ipynb
+++ b/6_APROXIMACAO_DE_FUNCOES/6.4_ajuste_nao_linear_e_linearizacao.ipynb
@@ -46,8 +46,8 @@
     "\n",
     "\n",
     "$$ \\begin{cases} \n",
-    "\\left(\\sum_{i=1}^{m}x_i^2\\right)a_ 1 +\\left(\\sum_{i=1}^{m} x_i\\right) = \\sum_{i=1}^{m} =\\frac{x_i}{f(x_i)}\\\\ \n",
-    "\\left(\\sum_{i=1}^{m}x_i\\right)a_ 1 +\\left(m \\right)a_2 = \\frac{1}{f(x_i)}\\\\\n",
+    "\\left(\\sum_{i=1}^{m}x_i^2\\right)a_ 1 +\\left(\\sum_{i=1}^{m} x_i\\right) = \\sum_{i=1}^{m} \\frac{x_i}{f(x_i)}\\\\ \n",
+    "\\left(\\sum_{i=1}^{m}x_i\\right)a_ 1 +\\left(m \\right)a_2 = \\sum_{i=1}^{m} \\frac{1}{f(x_i)}\\\\\n",
     "             \\end{cases} $$\n"
    ]
   },
