--- a/8_SOLUCAO_NUMERICA_DE_EDOs/8.1_introducao.ipynb
+++ b/8_SOLUCAO_NUMERICA_DE_EDOs/8.1_introducao.ipynb
@@ -6,15 +6,93 @@
    "source": [
     "# 8.1 Introdução\n",
     "\n",
-    " métodos numéricos para a resolução de equações diferenciais ordinárias, cuja importância deve-se ao fato de ocorrer com frequência como modelos matemáticos de diferentes situações práticas, nas áreas de engenharia, física, biologia, economia, biomedicina etc.\n",
-    "Tipicamente, problemas que relacionam funções de uma variável e suas derivadas levam a uma equação diferencial ordinária. Supomos, neste texto, que o leitor esteja familiarizado com a teoria de equações diferenciais ordinárias.\n",
-    "Métodos numéricos são desenvolvidos para solução dessas equações diferenciais, pois com frequência soluções exatas não são possíveis, ou muito difícil de serem determinadas.\n",
+    "A importância dos métodos numéricos para a resolução de equações diferenciais ordinárias (EDOs) deve-se ao fato de que essas equações ocorrer com frequência em modelos matemáticos com aplicação em diferentes situações práticas, nas áreas de engenharia, física, biologia, economia, biomedicina etc.\n",
     "\n",
-    "Uma equação diferencial ordinária é uma equação que relaciona uma função de uma variável, y(x) e suas derivadas, sendo x a variável independente e y(x) a função incógnita.\n",
-    "A ordem de uma equação diferencial é determinada pela mais alta ordem da derivada da função y(x) presente na equação, conforme exemplo que segue.\n",
+    "Tipicamente, problemas que relacionam funções de uma variável e suas derivadas levam a uma equação diferencial ordinária. Métodos numéricos são utilizados para resolução dessas equações diferenciais, pois com frequência soluções exatas não são possíveis, ou muito difícil de serem determinadas.\n",
     "\n",
-    "As equações a seguir são exemplos de equações diferenciais ordinárias. Temos as seguintes notações usuais:\n",
-    "y′=dy, y′′=d2y···\n"
+    "Uma equação diferencial ordinária é uma equação que relaciona uma função de uma variável, $y(x)$ e suas derivadas, sendo $x$ a variável independente e $y(x)4 a função incógnita.\n",
+    "\n",
+    "A ordem de uma equação diferencial é determinada pela mais alta ordem da derivada da função $y(x)$ presente na equação. As equações a seguir são exemplos de equações diferenciais ordinárias. Temos as seguintes notações usuais:\n",
+    "\n",
+    "$$y′= \\frac{dy}{dx}, \\,\\,\\,  y′′= \\frac{d^2y}{dx^2}, \\,\\,\\,... $$\n",
+    "\n",
+    "Por exemplo:<br>\n",
+    "\n",
+    "$ \\frac{dy}{dx} = 3x-1$ é uma EDO de ordem 1 <br>\n",
+    "$ y' = -xy$ é uma EDO de ordem 1<br>\n",
+    "$ \\frac{d^2y}{dx^2} = x^2-y+e^x$ é uma EDO de ordem 2 <br>\n",
+    "$ y'' -4y' + 3y = x$ é uma EDO de ordem 2 \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Resolver uma equação diferencial consiste em determinar uma função $y(x)$ que satisfaça a equação.\n",
+    "\n",
+    "Por exemplo, a equação diferencial \n",
+    "\n",
+    "$$y' = −x y$$ \n",
+    "\n",
+    "tem solução \n",
+    "\n",
+    "$$ y = c \\, e^{\\frac{-x^2}{2}}$$\n",
+    "\n",
+    "com $c$ constante, pois\n",
+    "\n",
+    "$$ y' = c \\, e^{\\frac{-x^2}{2}}(-x) = -xy$$\n",
+    "\n",
+    "ou seja, a função $y(x)$ satisfaz a equação. \n",
+    "Podemos observar que esta equação apresenta infinitas soluções, pois, para cada valor diferente de $c$ temos uma solução diferente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problema de valor Inicial\n",
+    "\n",
+    "Considere a equação diferencial ordinária, $y' = y$, cuja solução é dada por $y(x)=ce^x$ $c\\in R$.\n",
+    "\n",
+    "Assim, a equação diferencial dada apresenta infinitas soluções, uma vez que, para cada valor escolhido para a constante $c$, temos uma solução, como, por exemplo, $y(x)=c_0e^x$,$y(x)=c_1e^x$,$y(x)=c_2e^x$,sendo $c_0$, $c_1$ , $c_2$ valores fixados,conforme exibido na figura abaixo.\n",
+    "\n",
+    "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/8_SOLUCAO_NUMERICA_DE_EDOs/imagens/pvi01.png\" width=\"560\">\n",
+    "\n",
+    "Se considerarmos que conhecemos o valor da função $y(x)$ em um ponto, isto é, $x = x_0$ , o valor de $y(x)$ é $y(x_0) = y_0$ e temos uma única solução para a equação proposta. Esta solução única é obtida quando usamos a solução geral da equação diferencial\n",
+    "no ponto $x = x_0$ e obtemos o valor da constante $c$, como segue: $$y(x_0)=y_0$$ \n",
+    "então \n",
+    "$$ce^{x_0} = y_0$$ \n",
+    "logo \n",
+    "$$c=y_0e^{−x_0}$$\n",
+    "\n",
+    "Assim, a solução única para a equação diferencial é dada por: \n",
+    "\n",
+    "$$y(x) = ce^x = y_0 e^{−x_0} e^x = y_0e^{(x−x_0)}$$\n",
+    "\n",
+    "Portanto, $y(x) = y_0 e^{(x−x_0)}$, conforme exibido na figura.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Definição\n",
+    "\n",
+    "Um Problema de Valor Inicial (PVI) de primeira ordem consiste de uma equação diferencial $y' = f (x,y)$, $x ≥ x_0$ e uma condição inicial $y(x_0) = y_0$, em que $y_0$ é um valor dado, chamado de valor inicial.\n",
+    "\n",
+    "Neste caso, podemos escrever o PVI da seguinte forma:\n",
+    "\n",
+    "$$ \n",
+    "\\begin{cases} \n",
+    "y'= f(x,y)\\\\ \n",
+    "\\\\\n",
+    "y(x_0)=y_0\n",
+    "\\end{cases}$$\n",
+    "\n",
+    "Resolver o PVI consiste em determinar uma função $y(x)$ que satisfaça a equação diferencial $y' = f (x,y)$ e a condição inicial $y(x_0) = y_0$.\n",
+    "\n",
+    "Se a função $f$ e $ \\frac{\\partial f}{\\partial y}$ são contínuas, temos que o PVI apresenta solução única.\n",
+    "\n"
    ]
   },
   {
