--- a/8_SOLUCAO_NUMERICA_DE_EDOs/8.1_introducao.ipynb
+++ b/8_SOLUCAO_NUMERICA_DE_EDOs/8.1_introducao.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "A ordem de uma equação diferencial é determinada pela mais alta ordem da derivada da função $y(x)$ presente na equação. As equações a seguir são exemplos de equações diferenciais ordinárias. Temos as seguintes notações usuais:\n",
     "\n",
-    "$$y′= \\frac{dy}{dx}, \\,\\,\\,  y′′= \\frac{d^2y}{dx^2}, \\,\\,\\,... $$\n",
+    "$$y'= \\frac{dy}{dx}, \\,\\,\\,  y''= \\frac{d^2y}{dx^2}, \\,\\,\\,... $$\n",
     "\n",
     "Por exemplo:<br>\n",
     "\n",
