--- a/8_SOLUCAO_NUMERICA_DE_EDOs/8.1_introducao.ipynb
+++ b/8_SOLUCAO_NUMERICA_DE_EDOs/8.1_introducao.ipynb
@@ -16,11 +16,14 @@
     "\n",
     "$$y'= \\frac{dy}{dx}, \\,\\,\\,  y''= \\frac{d^2y}{dx^2}, \\,\\,\\,... $$\n",
     "\n",
-    "Por exemplo:<br>\n",
+    "Por exemplo:\n",
     "\n",
-    "$ \\frac{dy}{dx} = 3x-1$ é uma EDO de ordem 1 <br>\n",
-    "$ y' = -xy$ é uma EDO de ordem 1<br>\n",
-    "$ \\frac{d^2y}{dx^2} = x^2-y+e^x$ é uma EDO de ordem 2 <br>\n",
+    "$ \\frac{dy}{dx} = 3x-1$ é uma EDO de ordem 1\n",
+    "\n",
+    "$ y' = -xy$ é uma EDO de ordem 1\n",
+    "\n",
+    "$ \\frac{d^2y}{dx^2} = x^2-y+e^x$ é uma EDO de ordem 2 \n",
+    "\n",
     "$ y'' -4y' + 3y = x$ é uma EDO de ordem 2 \n"
    ]
   },
