--- a/8_SOLUCAO_NUMERICA_DE_EDOs/8.1_introducao.ipynb
+++ b/8_SOLUCAO_NUMERICA_DE_EDOs/8.1_introducao.ipynb
@@ -66,13 +66,13 @@
     "então \n",
     "$$ce^{x_0} = y_0$$ \n",
     "logo \n",
-    "$$c=y_0e^{−x_0}$$\n",
+    "$$c=y_0e^{0-x_0}$$\n",
     "\n",
     "Assim, a solução única para a equação diferencial é dada por: \n",
     "\n",
-    "$$y(x) = ce^x = y_0 e^{−x_0} e^x = y_0e^{(x−x_0)}$$\n",
+    "$$y(x) = ce^x = y_0 e^{-x_0} e^x = y_0e^{(x-x_0)}$$\n",
     "\n",
-    "Portanto, $y(x) = y_0 e^{(x−x_0)}$, conforme exibido na figura.\n"
+    "Portanto, $y(x) = y_0 e^{(x-x_0)}$, conforme exibido na figura.\n"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "source": [
     "### Definição\n",
     "\n",
-    "Um Problema de Valor Inicial (PVI) de primeira ordem consiste de uma equação diferencial $y' = f (x,y)$, $x ≥ x_0$ e uma condição inicial $y(x_0) = y_0$, em que $y_0$ é um valor dado, chamado de valor inicial.\n",
+    "Um Problema de Valor Inicial (PVI) de primeira ordem consiste de uma equação diferencial $y' = f (x,y)$, $x \\req x_0$ e uma condição inicial $y(x_0) = y_0$, em que $y_0$ é um valor dado, chamado de valor inicial.\n",
     "\n",
     "Neste caso, podemos escrever o PVI da seguinte forma:\n",
     "\n",
