--- a/8_SOLUCAO_NUMERICA_DE_EDOs/8.1_introducao.ipynb
+++ b/8_SOLUCAO_NUMERICA_DE_EDOs/8.1_introducao.ipynb
@@ -102,6 +102,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Discretização\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Exemplo\n",
     "\n",
     "Use o método de Euler para integrar numericamente a equação:\n",
@@ -135,9 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -193,9 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -263,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
