atualizando imagens cap7

--- a/7_INTEGRACAO_NUMERICA/7.3_regra_dos_trapezios.ipynb
+++ b/7_INTEGRACAO_NUMERICA/7.3_regra_dos_trapezios.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## 7.2 Regra dos trapézios \n",
     "\n",
-    "Considere uma função $f(x)$ definida nos pontos $x_0$ e $x_1$ no intervalo $[a,b]$. O polinômio de Lagrange para  esses pontos, considerando a mudança de variável $u = \\frac{x-x_0}{h}$ é dado por\n",
+    "Considere uma função $f(x)$ definida nos pontos $x_0$ e $x_1$ no intervalo $[a,b]$. O polinômio de Lagrange para  esses pontos, considerando a mudança de variável $u = \\frac{x-x_0}{h}$, é dado por\n",
     "\n",
     "$$ P(u) =  f(x_0) (1-u) + f(x_1)(u)$$\n",
     "\n",
@@ -26,7 +26,8 @@
     "\n",
     "\n",
     "Graficamente, tem-se\n",
-    "![integral_area.jpg](https://github.com/tiagoburiol/NUMETHODS/raw/master/7_INTEGRACAO_NUMERICA/imagens/trapexio.jpg)\n",
+    "\n",
+    "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/7_INTEGRACAO_NUMERICA/imagens/trapexio.jpg\" width=\"400\">\n",
     "\n",
     "### Erro na regra dos trapézios\n",
     "\n",
@@ -76,15 +77,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1.     1.003  1.006 ...,  3.994  3.997  4.   ]\n",
-      "Resultado Trapézio:  4.66666647917\n"
+      "[1.    1.003 1.006 ... 3.994 3.997 4.   ]\n",
+      "Resultado Trapézio:  4.666666479166708\n"
      ]
     }
    ],
@@ -108,32 +109,61 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "A regra dos trapézios também está disponível na biblioteca do Scipy como uma das funções para integração numérica. Assim, podemos chegar no mesmo resultado acima fazendo:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I = 4.666666479166707\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"I =\", np.trapz(f(X), dx=h))  # entra com valores de f(xi) e de h\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ou"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I = 4.666666479166707\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"I =\", np.trapz(f(X), X)) # entra com valores de f(xi) e de xi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
