atualizando imagens cap7

--- a/7_INTEGRACAO_NUMERICA/7.3_regra_dos_trapezios.ipynb
+++ b/7_INTEGRACAO_NUMERICA/7.3_regra_dos_trapezios.ipynb
@@ -46,7 +46,9 @@
     "\n",
     "Consiste na subdivisão do intervalo $[a,b]$ em $n$ subintervalos iguais, de amplitude $h=\\frac{x_n-x_0}{n}$, $x_0=a$ e $x_n=b$ e aplicarmos a regra dos trapézios a cada dois pontos consecutivos.\n",
     "\n",
-    "![trapezio2.jpg](https://github.com/tiagoburiol/NUMETHODS/raw/master/7_INTEGRACAO_NUMERICA/imagens/trapezio2.jpg)\n",
+    "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/7_INTEGRACAO_NUMERICA/imagens/trapezio2.jpg\" width=\"400\">\n",
+    "\n",
+    "\n",
     "\n",
     "Assim, temos \n",
     "\n",
